@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2000, 2017 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021 Contributors to the Eclipse Foundation
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -85,11 +86,11 @@ public class JAASAccessControlModel implements AccessControlModel {
         String ppclass = authProps.getProperty(AccessController.PROP_ACCESSCONTROL_PREFIX + PROP_POLICY_PROVIDER);
         try {
             if (pfclass != null) {
-                permFactory = (PermissionFactory) Class.forName(pfclass).newInstance();
+                permFactory = (PermissionFactory) Class.forName(pfclass).getDeclaredConstructor().newInstance();
             }
             // if (ppclass != null) policyProvider = (Policy)Class.forName(ppclass).newInstance();
             if (ppclass != null) {
-                Class.forName(ppclass).newInstance();
+                Class.forName(ppclass).getDeclaredConstructor().newInstance();
             }
         } catch (Exception e) {
             logger.logStack(Logger.ERROR, e.getMessage(), e);
