@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2000, 2017 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021 Contributors to the Eclipse Foundation
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -64,7 +65,7 @@ public class HttpsProtocol extends HTTPProtocol {
             }
 
             try {
-                driver = (HttpTunnelServerDriver) Class.forName(driverClass).newInstance();
+                driver = (HttpTunnelServerDriver) Class.forName(driverClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new IOException(e.getMessage(), e);
             }
@@ -72,7 +73,7 @@ public class HttpsProtocol extends HTTPProtocol {
             driver.start();
         } else {
             try {
-                driver = (HttpTunnelServerDriver) Class.forName(driverClass).newInstance();
+                driver = (HttpTunnelServerDriver) Class.forName(driverClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new IOException(e.getMessage(), e);
             }
