@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2000, 2017 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021 Contributors to the Eclipse Foundation
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -209,7 +210,7 @@ public abstract class IMQIPServiceFactory extends ServiceFactory {
 
         Protocol proto = null;
         try {
-            proto = (Protocol) Class.forName(pclass).newInstance();
+            proto = (Protocol) Class.forName(pclass).getDeclaredConstructor().newInstance();
 
         } catch (Exception ex) {
             String args[] = { protocol, instancename };
